# db-mcp

./: .gitignore  Cargo.toml  README.md  config.yml
src/: config.rs  main.rs  mcp.rs  model.rs  persist.rs  registry.rs  tools.rs  validator.rs
src/adapter/: mod.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  sybase.rs
