[package]
name = "db-mcp"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
async-trait = "0.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
odbc-api = "8"
oracle = { version = "0.6", optional = true }

[features]
default = ["oracle"]
oracle = ["dep:oracle"]

[profile.release]
opt-level = "z"
lto = true
strip = true
